<resources>
    <string name="app_name">Restaurant Inspector</string>
    <string name="hazard_level_image_desc">hazard level</string>
    <string name="restaurant_logo_image_desc">Restaurant Logo</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="inspection_date">Inspection Date</string>
    <string name="number_of_issues"># of issues: 0</string>
    <string name="no_inspections">No Inspection Yet</string>
    <string name="inspected_days_ago">Inspected %d days ago</string>
    <string name="inspection_on_month_day">Inspected on: %s %d</string>
    <string name="inspection_on_month_year">Inspected on: %s %d</string>
    <string name="num_issues"># of issues: %d</string>
    <string name="num_crit_issues"># of critical issues: %d</string>
    <string name="num_non_crit_issues"># of non-critical issues: %d</string>
    <string name="restaurants">Restaurants</string>
    <string name="address">Address</string>
    <string name="gps_coordinates">GPS coordinates</string>
    <string name="inspections">Inspections</string>
    <string name="default_description">Plans/construction/alterations not in accordance with the Regulation [s. 3; s. 4]</string>
    <string name="violation_severity">violation severity</string>
    <string name="violation_type">violation type</string>
    <string name="inspection_type">inspection type</string>
    <string name="hazard_level">hazard level</string>
    <string name="inspection">Inspection</string>
    <string name="violations">Violations</string>
    <string name="inspection_type_in_violation">%s inspection</string>
    <string name="no_violations">No violations</string>
    <string name="no_inspections_yet">No inspections yet.</string>
    <string name="restaurant_inspection">%s inspection</string>
    <string name="restaurant">Restaurant</string>
    <string name="star">star</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="unable_to_check_for_updates">Unable to for check updates. Check your connection.</string>
    <string name="unable_to_update">Unable to update data or update was canceled.</string>
    <string name="update_available">Update available.</string>
    <string name="update_question">Would you like to update?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="downloading">Downloading…</string>
    <string name="title_activity_maps">Map</string>
    <string name="see_list">See list</string>
    <string name="see_map">See Map</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="restrict_to_favourites">Restrict to favourites</string>
    <string name="cancel">Cancel</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="number_of_violations_within_the_last_year">Number of critical violations within the last year</string>
    <string name="hazard_level_of_most_recent_inspection">Hazard level of most recent inspection</string>
    <string name="any">Any</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="filter_restaurants">Filter restaurants</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_restaurants_new_inspections">The following favorite restaurants have new inspections:</string>
    <string name="no_fav_restaurants_updated">No favorite restaurants have new inspections</string>


</resources>