<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SingleInspection">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewInspectionTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewInspectionTitle">

        <TextView
            android:id="@+id/textViewInspectionNumNonCrit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_non_crit_issues"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/textViewInspectionNumCrit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/num_crit_issues"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/textViewInspectionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/inspection_type"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/textViewInspectionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/inspection_date"
            android:textColor="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageViewSingleInspectionHazardIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/hazard_no_inspection"
                android:contentDescription="@string/hazard_level_image_desc" />

            <TextView
                android:id="@+id/textViewHazardLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/hazard_level"
                android:textColor="?android:attr/textColorPrimary" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewInspectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/inspection"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewViolationsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/violations"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/violationList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewViolationsTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>