<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/hazard_level"
        app:layout_constraintTop_toBottomOf="@+id/RestaurantName">

        <TextView
            android:id="@+id/sumNumIssues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:baselineAligned="false"
            android:text="@string/number_of_issues"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/InspectionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/inspection_date"
            android:textColor="?android:attr/textColorPrimary" />
    </LinearLayout>

    <ImageView
        android:id="@+id/hazard_level"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/hazard_level_image_desc"
        android:src="@drawable/neutral"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/RestaurantName"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.555" />

    <ImageView
        android:id="@+id/restaurant_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/restaurant_logo_image_desc"
        android:src="@drawable/a_and_w"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/RestaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/restaurant_name"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toEndOf="@+id/restaurant_logo"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

