<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="243dp"
        android:layout_height="82dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="90dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hazard_level"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/critIssues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:baselineAligned="false"
            android:text="@string/num_crit_issues"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/nonCritIssues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:baselineAligned="false"
            android:text="@string/num_non_crit_issues"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/InspectionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/inspection_date"
            android:textColor="?android:attr/textColorPrimary" />
    </LinearLayout>

    <ImageView
        android:id="@+id/hazard_level"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="344dp"
        android:contentDescription="@string/hazard_level_image_desc"
        android:src="@drawable/neutral"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />


</androidx.constraintlayout.widget.ConstraintLayout>

